[package]
name = "ld06"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Ealovega <Andrew@Ealovega.dev>"]
description = "Driver for the LD06 LiDAR"
readme = "README.md"
license = "MIT"
repository = "https://github.com/andyblarblar/LD06"
keywords = ["driver", "LiDAR", "ld06"]
categories = ["science::robotics"]

[dependencies]
serialport = "4.1.0"
ringbuf = "0.2.8"
cancellation = "0.1.0"
byteorder = "1.4.3"

anyhow = "1.0.56"
log = "0.4.16"

[dev-dependencies]
simple-log = "1.5.1"

[profile.release]
lto = true
strip = true
